--- a/Demo2/Unit_Tests/ticker_testing.html
+++ b/Demo2/Unit_Tests/ticker_testing.html
@@ -4,10 +4,9 @@
 <iframe
  src="https://widgets.tc2000.com/WidgetServer.ashx?id=100222"
  width="1250" 
- noresize="noresize" 
- scrolling="no" 
  height="16" 
  frameborder="0" 
  ></iframe>
  
  </html>
+ <!--the height has to be at a maximum of 16 -->
